# starting-ragchatbot-codebase-dl_ai

./: .gitignore  CLAUDE.md  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_SUMMARY.md  TESTING_FRAMEWORK.md  TESTING_QUICK_START.md  check_quality.sh  format_code.sh  frontend-changes.md  pyproject.toml  request-flow-d3.html  request-flow-recharts.html  request-flow-sankey.html  request-flow-timeline.html
.claude/: settings.local.json
.github/workflows/: claude.yml
backend/: ai_generator.py  app.py  config.py  document_processor.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: README.md  conftest.py  test_api_endpoints.py  test_components.py  test_models.py
frontend/: index.html  script.js  style.css
